--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<header>
+        <h1>Сервіс з бронювання авіаквитків</h1>
+    </header>
+    <main>
+        <div class="form-container">
+            <form id="booking-form">
+                <div class="form-group">
+                    <label for="full-name">ПІБ пасажира:</label>
+                    <input type="text" id="full-name" name="full-name" required>
+                </div>
+                <div class="form-group">
+                    <label for="departure">Місце відправлення:</label>
+                    <select id="departure" name="departure" required>
+                        <option value="" disabled selected>Оберіть місце відправлення</option>
+                        <option value="Київ">Київ</option>
+                        <option value="Львів">Львів</option>
+                        <option value="Одеса">Одеса</option>
+                        <option value="Харків">Харків</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="destination">Місце прибуття:</label>
+                    <select id="destination" name="destination" required>
+                        <option value="" disabled selected>Оберіть місце прибуття</option>
+                        <option value="Київ">Київ</option>
+                        <option value="Львів">Львів</option>
+                        <option value="Одеса">Одеса</option>
+                        <option value="Харків">Харків</option>
+                    </select>
+                </div>
 </body>
 </html>
