--- a/index.html
+++ b/index.html
@@ -37,5 +37,28 @@
                         <option value="Харків">Харків</option>
                     </select>
                 </div>
+                <div class="form-group">
+                    <label for="date">Дата:</label>
+                    <input type="date" id="date" name="date" required>
+                </div>
+                <div class="form-group">
+                    <label for="departure-time">Час вильоту:</label>
+                    <select id="departure-time" name="departure-time" required>
+                        <option value="" disabled selected>Оберіть час вильоту</option>
+                        <option value="08:00">08:00</option>
+                        <option value="10:00">10:00</option>
+                        <option value="12:00">12:00</option>
+                        <option value="14:00">14:00</option>
+                        <!-- Додайте інші варіанти часу за потребою -->
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="passengers">Кількість пасажирів:</label>
+                    <input type="number" id="passengers" name="passengers" min="1" required>
+                </div>
+                <div id="seats-container" class="form-group">
+                    <label>Оберіть місця:</label>
+                    <div id="seats-selection"></div>
+                </div>
 </body>
 </html>
