Виведення фіксованої ціни, створення кнопок бронювання і очищення, виведення результату, що включає всю введену в поля інформацію
У цій частині коду реалізовано наступне:

1. Ціна за квиток: 
   - В <div class="form-group"> розміщено текст про ціну за квиток, де <span id="ticket-price">500</span> показує фіксовану ціну квитка, яка встановлена на 500 гривень.

2. Приховане поле для ціни:
   - <input type="hidden" id="price" value="500"> створює приховане поле, яке також містить фіксовану ціну квитка. Це поле може використовуватися для передачі ціни через форму бронювання без відображення користувачеві.

3. Кнопки управління формою:
   - <button type="submit">Забронювати</button> - кнопка для відправлення форми з даними бронювання.
   - <button type="reset">Очистити</button> - кнопка для очищення всіх полів форми, щоб користувач міг почати заповнення знову.

4. Підтвердження бронювання:
   - <div id="confirmation" style="display:none;"> - блок для показу підтвердження бронювання, який на початковому етапі має стиль display: none;, тобто він прихований.

5. Скрипт:
   - <script src="script.js"></script> - підключення зовнішнього JavaScript файлу script.js, який містить логіку обробки форми та показу підтвердження бронювання.

--- a/index.html
+++ b/index.html
@@ -60,5 +60,19 @@
                     <label>Оберіть місця:</label>
                     <div id="seats-selection"></div>
                 </div>
+                <div class="form-group">
+                    <p>Ціна за квиток: <span id="ticket-price">500</span> грн</p>
+                </div>
+                <input type="hidden" id="price" value="500"> <!-- Приховане поле для фіксованої ціни -->
+                <button type="submit">Забронювати</button>
+                <button type="reset">Очистити</button>
+            </form>
+        </div>
+        <div id="confirmation" style="display:none;">
+            <h2>Підтвердження бронювання</h2>
+            <p id="confirmation-message"></p>
+        </div>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
